feat(*): fixed validation message source and code of response

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -8,6 +8,7 @@ message_error=Error
 #ERRORS
 customer.error.notFound=Customer with id {0} not found
 customer.error.unique.email=User with {0} email already exists
+customer.error.notFound.email=User with {0} email not found
 commodity.error.id=Illegal commodity id={0}
 commodity.branch.error.id=Illegal branch id={0}
 commodity.type.error.id=Illegal commodity type id={0}
