--- a/src/test/resources/i18n/messages_zh_HK.properties
+++ b/src/test/resources/i18n/messages_zh_HK.properties
@@ -7,6 +7,7 @@ message_error=Error
 
 #ERRORS
 customer.error.notFound=Customer with id {0} not found
+customer.error.notFound.email=User with {0} email not found
 customer.error.unique.email=User with {0} email already exists
 commodity.error.id=Illegal commodity id={0}
 commodity.branch.error.id=Illegal branch id={0}
